ingress/sentry.ingress.yml
#---------------------------------------------------------------
#                         INGRESS
#---------------------------------------------------------------
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: sentry
  name: sentry-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
    - hosts:
        - sentry.domain.com
      secretName: secret-tls

  rules:
    - host: sentry.domain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sentry-web
                port:
                  number: 9000

          - path: /api/store/
            pathType: Prefix
            backend:
              service:
                name: sentry-relay
                port:
                  number: 3000

          - path: /api/[1-9]\d*/
            pathType: Prefix
            backend:
              service:
                name: sentry-relay
                port:
                  number: 3000
---
